# freak

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  LICENSE  README.md  SECURITY.md  bot_memory.db  check_filters.py  config.py  deploy.sh  docker-compose.watchtower.yml  docker-compose.yml  freak.service  justfile  main.py  pyproject.toml  shell.nix  verify_history.py
.github/workflows/: docker.yml
bot/: agent.py  build_info.py  commands.py  env_config.py  handlers.py  jobs.py  llm.py  logic.py  media_utils.py  memory.py  messages.py  system.py  vision.py
bot/telemetry/: __init__.py  analysis.py  dashboard.py  export.py  storage.py  web.py
scripts/: test_prompt.py  write_build_info.py
tests/: conftest.py  test_agent.py  test_build_info.py  test_commands.py  test_env_config.py  test_handlers.py  test_jobs.py  test_llm.py  test_logic.py  test_media_utils.py  test_memory.py  test_system.py  test_telemetry_analysis.py  test_telemetry_dashboard.py  test_telemetry_storage.py  test_telemetry_web.py
