[project]
name = "freak"
version = "0.1.0"
description = "Persona-driven Telegram bot with memory, media tools, and an LLM research agent"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.11.0",
    "aiosqlite>=0.21.0",
    "openai>=2.8.1",
    "opencv-python-headless>=4.12.0.88",
    "pillow>=12.0.0",
    "pydantic>=2.12.5",
    "python-dotenv>=1.2.1",
    "python-telegram-bot>=22.5",
    "APScheduler>=3.10.4",
    "yt-dlp",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-mock>=3.15.1",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = "test_*.py"
